add/remove files

--- a/Conferences/DCCN_10_2015/Kocheganov_Zorine.tex
+++ b/Conferences/DCCN_10_2015/Kocheganov_Zorine.tex
@@ -283,11 +283,10 @@ first proven in \cite{k:z:02:2015} demonstrates.
     \\ =    \varphi(a,k_i,r_i,x^i) \cdot \zeta(b,k_i,r_i,x^i).
     \label{ProbablititiesToProve}
   \end{multline*}
-% where mappings $\varphi(\cdot, \cdot, \cdot, \cdot)$ and $\zeta(\cdot, \cdot, \cdot, \cdot)$ are defined by \eqref{conditionProbOne} and \eqref{conditionProbTwo} respectively, $i \geqslant 0$.
 \label{myTheorem}
 \end{thm}
 
-From now we focuse on low-priority customers in the queue $O_3$. 
+From now on we focuse on low-priority customers in the queue $O_3$. 
 
 \section{The low-priority queue}
 
@@ -313,7 +312,6 @@ of the  Markov chain~\eqref{eq:theMC}  are
 \Pr (\{\omega\colon
 \Gamma_{i+1}(\omega)=\Gamma^{(\tilde{k},\tilde{r})},\varkappa_{3,i+1}(\omega)=\tilde{x}\}\mid\{\omega\colon
 \Gamma_{i}(\omega)=\Gamma^{(k,r)},\varkappa_{3,i}(\omega)=x\}) 
-%\\ = \widetilde{\varphi}_3\bigl(\tilde{k},\tilde{r},h_T(\Gamma^{(k,r)},x_3),x_3,\tilde{x}_3\bigr),
 \displaybreak[0]
 \\ = (1-\delta_{\tilde x_3, 0})\cdot \varphi\Bigl(\tilde x_3+ \ell(\tilde k, \tilde r, 3)-x_3, h_T\bigl(
 \Gamma^{(\tilde k, \tilde r)}, x_3\bigr)\Bigr) 
