--- a/Conferences/DCCN_10_2015/Kocheganov_Zorine.tex
+++ b/Conferences/DCCN_10_2015/Kocheganov_Zorine.tex
@@ -287,7 +287,7 @@ first proven in \cite{k:z:02:2015} demonstrates.
 \label{myTheorem}
 \end{thm}
 
-From now we focuse on low-priority customers in the queue $O_3$. 
+From now on we focuse on low-priority customers in the queue $O_3$. 
 
 \section{The low-priority queue}
 
